# shams_messenger

./: .env.example  .gitignore  LICENSE  README.md  docker-compose.yml
backend/: Dockerfile  alembic.ini  pyproject.toml  requirements.txt
backend/docker/: run_back.sh
backend/migrations/: env.py
backend/migrations/versions/: 328753d015d7_database_creation.py
backend/src/users/: config.py  db.py  main.py  manager.py
